--- a/rootdir/init.hawaii_ss_kyleprods.rc
+++ b/rootdir/init.hawaii_ss_kyleprods.rc
@@ -4,6 +4,7 @@ import init.log.rc
 on early-init
     write /sys/fs/selinux/enforce 0
     mkdir /efs 0771 radio system
+    mount debugfs /sys/kernel/debug /sys/kernel/debug mode=755
     chown system system /sys/devices/platform/pwm-backlight.0/backlight/panel/brightness
 
 on init
@@ -11,7 +12,6 @@ on init
     mount tmpfs tmpfs /tmp
     chmod 1775 /tmp
 
-    symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard0
 
     symlink /efs /factory
@@ -141,7 +141,6 @@ on boot
     setprop ro.build.product hawaii
     setprop ro.product.device hawaii
 
-    mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 # WIFI
     setprop wifi.interface wlan0
@@ -529,6 +528,7 @@ on post-fs
         class main
         socket wpa_wlan0 dgram 660 wifi wifi
         disabled
+        group system wakelock
         oneshot
 
     service p2p_supplicant /system/bin/wpa_supplicant \
@@ -545,37 +545,7 @@ on post-fs
         class main
         socket wpa_wlan0 dgram 660 wifi wifi
         disabled
-        oneshot
-
-    service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
-        class main
-        disabled
-        oneshot
-
-    service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-        class main
-        disabled
-        oneshot
-
-    service iprenew_wlan0 /system/bin/dhcpcd -n
-        class main
-        disabled
-        oneshot
-
-    service iprenew_p2p /system/bin/dhcpcd -n
-        class main
-        disabled
-        oneshot
-
-# Bluetooth PAN
-    service dhcpcd_bt-pan /system/bin/dhcpcd -ABKL
-        class main
-        disabled
-        oneshot
-
-    service iprenew_bt-pan /system/bin/dhcpcd -n
-        class main
-        disabled
+        group system wakelock
         oneshot
 
 # For WiFi MFG(TestMode)
@@ -610,7 +580,7 @@ on property:init.svc.macloader=stopped
         setenv LD_PRELOAD /system/lib/libglgps-compat.so
         class late_start
         user gps
-        group system root inet radio wifi sdcard_rw
+        group system wakelock root inet radio wifi sdcard_rw
 
 # Run bkmgrd automatically on startup
     service bkmgrd /system/bin/bkmgrd
